--- a/_includes/component-comments.html
+++ b/_includes/component-comments.html
@@ -1,9 +1,9 @@
 {% if page.comment != false %}
 <script src="https://giscus.app/client.js"
         data-repo="oxmhpark/blog"
-        data-repo-id="R_kgDOLF1EaQ"
+        data-repo-id="R_kgDOQB2Qgg"
         data-category="Comments"
-        data-category-id="DIC_kwDOLF1Eac4CceU0"
+        data-category-id="DIC_kwDOQB2Qgs4CwmtL"
         data-mapping="pathname"
         data-strict="1"
         data-reactions-enabled="0"
