--- a/_sass/base-defaults.scss
+++ b/_sass/base-defaults.scss
@@ -66,7 +66,8 @@ blockquote {
     width: 48px;
     height: 48px;
     left: 0;
-    top: -14px;
+    /* top: -14px; */
+    top: 0px;
     content: '“';
     font-size: 48px;
     font-family: Georgia, serif;
