스타일 수정: 목록에서 queries 항목 감춤

--- a/_sass/entry-format-list-item.scss
+++ b/_sass/entry-format-list-item.scss
@@ -29,6 +29,10 @@
 			.entry-refs {
 				display: none;
 			}
+
+			.entry-queries {
+				display: none;
+			}
 	
 			.entry-date {
 				display: inline;
